--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>face_recognition_msgs</name>
-  <version>0.0.0</version>
+  <version>0.1.1</version>
   <description>The face_recognition_msgs package is for custom message types</description>
 
-  <maintainer email="philip@thehopleys.me.uk">Philip Hopley</maintainer>
+  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>
 
   <license>BSD</license>
 
-  <author email="philip@thehopleys.me.uk">Philip Hopley</author>
+  <author email="sleepyserver6@gmail.com">Philip Hopley</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>std_msgs</build_depend>
